Feat: Add content and header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Trendy Cuts</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="hero-container">
+        <header class="hero-header">
+            <h1 class="header-logo">TrendyCut</h1>
+            <ul>
+                <li><a href="#" class="hero-links">Home</a></li>
+                <li><a href="#" class="hero-links">Services</a></li>
+                <li><a href="#" class="hero-links">About</a></li>
+                <li><a href="#" class="hero-links">Contact</a></li>
+            </ul>
+        </header>
+
+        <section class="hero-content">
+            <div class="text-content">
+                <h1 class="main-text">Elevating Your Look</h1>
+                <p class="sub-text">This website has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower contrast</p>
+                <button class="hero-button">See Our Gallery</button>
+            </div>
+            <img src="#">
+        </section>
+    </div>
 </body>
 </html>
