Feat: Add Image, Services, Quote, Contact and Footer

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         <header class="hero-header">
             <h1 class="header-logo">TrendyCut</h1>
             <ul>
-                <li><a href="#" class="hero-links">Home</a></li>
-                <li><a href="#" class="hero-links">Services</a></li>
-                <li><a href="#" class="hero-links">About</a></li>
-                <li><a href="#" class="hero-links">Contact</a></li>
+                <li><a href="#information" class="hero-links">Services</a></li>
+                <li><a href="#quote" class="hero-links">Quote</a></li>
+                <li><a href="#contact-container" class="hero-links">Contact</a></li>
             </ul>
         </header>
 
@@ -23,10 +22,52 @@
                 <h1 class="main-text">Elevating Your Look</h1>
                 <p class="sub-text">This website has some subtext that goes here under the main title. 
                 It's a smaller font and the color is lower contrast</p>
-                <button class="hero-button">See Our Gallery</button>
+                <button class="hero-button" type="buttonn">See Our Gallery</button>
             </div>
-            <img src="#">
+            <img src="image/barber-logo.jpg" alt="tools">
         </section>
     </div>
+
+    <section id="information">
+        <h1 class="header-info">Services</h1>
+        
+        <div class="card-container">
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="quote">
+        <p class="main-quote">"Great hair doesn't happen by chance, it happens by appointment."</p>
+        <p class="sub-quote">- Jamie Foster</p>
+    </section>
+
+    <section id="contact-container">
+        <div class="contact-card">
+            <div class="contact">
+                <h3>Unlock your best look at our barbershop!</h3>
+                <p>Try now for a fresh cut and a boost of confidence like never before.</p>
+            </div>
+            <button type="button">Book Now</button>
+        </div>
+    </section>
+
+    <footer>
+        <p>Copyright © Enkiduu | Daryll Villanueva</p>
+    </footer>
 </body>
 </html>
